<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <!-- Today's date TextView -->
        <TextView
            android:id="@+id/tv_today_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Today Date"
            android:textSize="20sp" />

        <!-- Start time EditText -->
        <EditText
            android:id="@+id/et_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_today_date"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="Start Time"
            android:inputType="time" />

        <!-- Stop time EditText -->
        <EditText
            android:id="@+id/et_stop_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_start_time"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="Stop Time"
            android:inputType="time" />

        <!-- Category RadioGroup -->
        <RadioGroup
            android:id="@+id/rg_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_stop_time"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_songothik_dayitto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SonKaj" />

            <RadioButton
                android:id="@+id/rb_dawah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dawatiKaj" />

            <RadioButton
                android:id="@+id/rb_academic_study"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AcademicOdaiyon" />

            <RadioButton
                android:id="@+id/rb_songothonic_study"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SongoOdayon" />

            <RadioButton
                android:id="@+id/rb_sleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep" />

            <RadioButton
                android:id="@+id/rb_personal_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personalKaj" />
        </RadioGroup>

        <!-- Activity EditText -->
        <EditText
            android:id="@+id/et_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_category"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="Activity" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_activity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="submit" />

    </RelativeLayout>


</ScrollView>